MOVED ./app/assets/js/ to ./app/assets/javascripts/. FIXED (er hacked) the listing delete action in user profile.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,6 @@
     <link rel="stylesheet" type="text/css" href="/assets/css/slicknav.css">
     <!-- Animate -->
     <link rel="stylesheet" type="text/css" href="/assets/css/animate.css">
-    <!-- Owl carousel -->
-    <link rel="stylesheet" type="text/css" href="/assets/css/owl.carousel.css">
     <!-- Main Style -->
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css">
     <!-- Responsive Style -->
@@ -58,9 +56,9 @@
     <%= render "partials/google_analytics" %>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="/assets/js/jquery.js"></script>
-    <script src="/assets/js/popper.js"></script>
-    <script src="/assets/js/bootstrap.js"></script>
+    <script src="/assets/javascripts/jquery.js"></script>
+    <script src="/assets/javascripts/popper.js"></script>
+    <script src="/assets/javascripts/bootstrap.js"></script>
 
   </head>
   <body>
@@ -73,20 +71,17 @@
 
     <%= javascript_include_tag 'application' %>
 
-    <script src="/assets/js/jquery.counterup.js"></script>
-    <script src="/assets/js/waypoints.js"></script>
-    <script src="/assets/js/wow.js"></script>
-    <script src="/assets/js/owl.carousel.js"></script>
-    <script src="/assets/js/jquery.slicknav.js"></script>
-    <script src="/assets/js/main.js"></script>
-    <script src="/assets/js/form-validator.js"></script>
-    <script src="/assets/js/contact-form-script.js"></script>
-    <script src="/assets/js/summernote.js"></script>
-    <script src="/assets/js/ch-comment.js"></script>
-    <script src="/assets/js/ch-listings.js"></script>
-    <script src="/assets/js/inspectlet.js"></script>
-    <script src="/assets/js/jquery.ui.widget.js"></script>
-    <script src="/assets/js/jquery.fileupload.js"></script>
+    <script src="/assets/javascripts/jquery.counterup.js"></script>
+    <script src="/assets/javascripts/waypoints.js"></script>
+    <script src="/assets/javascripts/wow.js"></script>
+    <script src="/assets/javascripts/jquery.slicknav.js"></script>
+    <script src="/assets/javascripts/main.js"></script>
+    <script src="/assets/javascripts/form-validator.js"></script>
+    <script src="/assets/javascripts/ch-comment.js"></script>
+    <script src="/assets/javascripts/ch-listings.js"></script>
+    <script src="/assets/javascripts/inspectlet.js"></script>
+    <script src="/assets/javascripts/jquery.ui.widget.js"></script>
+    <script src="/assets/javascripts/jquery.fileupload.js"></script>
 
   </body>
 </html>
