--- a/app/views/users/partials/_side_menu.html.erb
+++ b/app/views/users/partials/_side_menu.html.erb
@@ -4,18 +4,23 @@
             <div class="user">
             <% if current_user.avatar_file_name? %>
                 <figure>
-                    <%= image_tag(
-                        "/system/users/avatars/000/000/00"+current_user.id.to_s+"/thumb/"+current_user.avatar_file_name,
-                        alt: current_user.username,
+                    <%= image_tag @user.avatar.url(:thumb),
+                        alt: @user.username,
                         class: "img-fluid",
                         onerror: "this.onerror=null;this.src='/assets/no-photo-available.png';"
-                    ) %>
+                    %>
                 </figure>
             <% end %>
                 <div class="usercontent">
-                    <h3>Hello <%= current_user.username %></h3>
+                    <% if current_user.username == params['username'] %>
+                        <h3>Hello <%= current_user.username %></h3>
+                    <% else %>
+                        <h3> <%= params['username'] %></h3>
+                    <% end%>
                 </div>
             </div>
+
+            <% if current_user.username == params['username'] %>
             <nav class="navdashboard">
                 <ul>
                     <li>
@@ -31,6 +36,7 @@
                     </li>
                 </ul>
             </nav>
+            <% end %>
         </div>
     </aside>
 </div>
