--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -2287,6 +2287,7 @@ a.back-to-top:hover, a.back-to-top:focus {
   -webkit-transition: 0.4s;
   -moz-transition: 0.4s;
   transition: 0.4s;
+  min-height: 85%;
 }
 
 .category-icon-item .icon-box {
