--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -10,7 +10,9 @@
     <div class="col-md-12">
         <div class="breadcrumb-wrapper"></div>
             <ol class="breadcrumb">
-                <%= link_to 'Connechub' , root_path %>&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;<%= link_to @listing.category.name, category_path(@listing.category) %>&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;<%= link_to @listing.subcategory.name, category_subcategory_path(@listing.category, @listing.subcategory) %>
+                <%= link_to 'Connechub' , root_path %>&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;
+                <%= @listing.category.name %>&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;
+                <%= @listing.subcategory.name %>
             </ol>
         </div>
       <!-- Product Info Start -->
