FIXED JS error regarding callback.js missing. ADDED Pagy pagination init configuration.

--- a/app/views/subcategories/show.html.erb
+++ b/app/views/subcategories/show.html.erb
@@ -50,7 +50,7 @@
         </div>
         <!-- Adds wrapper End -->
 
-        <%= pagy_t(@pagy).html_safe %>
+        <%= pagy_bootstrap_nav(@pagy).html_safe %>
 
       </div>
     </div>
