--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -46,8 +46,10 @@
           </div>
         </div>
         <!-- Adds wrapper End -->
-
-        <%= pagy_bootstrap_nav(@pagy).html_safe %>
+        
+        <div class="row justify-content-center">
+          <%= pagy_bootstrap_nav(@pagy).html_safe %>
+        </div>
 
       </div>
     </div>
