--- a/app/views/subcategories/show.html.erb
+++ b/app/views/subcategories/show.html.erb
@@ -50,7 +50,7 @@
         </div>
         <!-- Adds wrapper End -->
         
-        <div class="row justify-content-center">
+        <div class="row justify-content-center pagy-padding">
           <%= pagy_bootstrap_nav(@pagy).html_safe %>
         </div>
 
