FIXED cat/subcat breadcrumb to be links. REMOVEd _listing_counter as that feature is addressed via pagination.

--- a/app/views/listings/partials/_item_card.erb
+++ b/app/views/listings/partials/_item_card.erb
@@ -22,7 +22,7 @@
                     <%= listing.title %>
                 <% end %>
             </h4>
-            <p class="listing-tagline"><%= listing.description %></p>
+            <p class="listing-tagline"><%= listing.description.truncate(128) %></p>
             <div class="meta-tag">
                 <div class="user-name">
                     <%= link_to user_path(listing.user.username) do %>
