--- a/app/views/layouts/index.html.erb
+++ b/app/views/layouts/index.html.erb
@@ -5,7 +5,8 @@
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-9 col-xs-12 text-center">
                 <div class="contents-ctg">
-                    <%= render "partials/hero_search_bar" %>
+                    <%= render :partial=> 'partials/slogan' %>
+                    <%= render :partial=> 'partials/hero_search_bar' %>
                 </div>
             </div>
         </div>
