--- a/app/views/listings/partials/_form.erb
+++ b/app/views/listings/partials/_form.erb
@@ -126,12 +126,10 @@
                                     </div>
                                     <div class="form-group mb-3">
                                         <%= f.label :description %>
-                                        <%= f.text_field :description,
-                                            # as: :trix_editor,
+                                        <%= f.trix_editor :description,
                                             class: "form-control",
                                             label: false,
                                             maxlength: "2048",
-                                            pattern: "[A-Za-z0-9]+{2048}",
                                             placeholder: "exp. Describe the item for sale as detailed as possible. Text, numbers, and punctuation are allowed.",
                                             required: true,
                                             type: "text"
