--- a/app/views/listings/partials/_item_card.erb
+++ b/app/views/listings/partials/_item_card.erb
@@ -22,7 +22,11 @@
                     <%= listing.title %>
                 <% end %>
             </h4>
-            <p class="listing-tagline"><%= listing.description.truncate(128) %></p>
+            <p class="listing-tagline">
+                <%= 
+                    ActionView::Base.full_sanitizer.sanitize(listing.description.truncate(128))
+                %>
+            </p>
             <div class="meta-tag">
                 <div class="user-name">
                     <%= link_to user_path(listing.user.username) do %>
