--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -61,7 +61,7 @@
                 </span>
               </div>
               <p class="mb-4">
-                <%= @listing.description %>
+                <%= render :inline => @listing.description %>
               </p>
             </div>
             <div class="tag-bottom">
