--- a/app/views/partials/_breadcrumb.erb
+++ b/app/views/partials/_breadcrumb.erb
@@ -12,7 +12,7 @@
     <% if (@subcategory) %>
         <li>
             <span>&nbsp;&nbsp;/&nbsp;&nbsp;</span>
-            <a href="../subcategories/<%= subcategory.id %>"><%= subcategory.name %></a>
+            <a href="<%= request.base_url %>/categories/<%= @category.id %>/subcategories/<%= subcategory.id %>"><%= subcategory.name %></a>
         </li>
     <% end %>
     </ol>
