--- a/app/views/search/show.html.erb
+++ b/app/views/search/show.html.erb
@@ -39,9 +39,9 @@
         </div>
         <!-- Adds wrapper End -->
 
-        <%= render :partial=> 'partials/pagination', locals: {
-          listings: @listings
-        } %>
+        <div class="row justify-content-center pagy-padding">
+          <%#= pagy_bootstrap_nav(@pagy).html_safe %>
+        </div>
 
       </div>
     </div>
