REMOVED test form values

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -23,7 +23,7 @@
                                 <i class="lni-user"></i>
                                 <%= f.text_field :username,
                                     class: "form-control",
-                                    value: "testuser"
+                                    value: ""
                                 %>
                             </div>
                         </div> 
@@ -32,7 +32,7 @@
                                 <i class="lni-envelope"></i>
                                 <%= f.email_field :email,
                                     class: "form-control",
-                                    value: "testuser@testemail.com"
+                                    value: ""
                                 %>
                             </div>
                         </div> 
@@ -41,7 +41,7 @@
                                 <i class="lni-lock"></i>
                                 <%= f.password_field :password,
                                     class: "form-control",
-                                    value: "~Asdf1234"
+                                    value: ""
                                 %>
                             </div>
                         </div>    
@@ -50,7 +50,7 @@
                                 <i class="lni-lock"></i>
                                 <%= f.password_field :password_confirmation,
                                     class: "form-control",
-                                    value: "~Asdf1234"
+                                    value: ""
                                 %>
                             </div>
                         </div>
