FIX field name in Forgot Password VW

--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -18,9 +18,10 @@
                             <i class="icon lni-user"></i>
                             <%= f.email_field :email,
                                 autofocus: true,
+                                autocomplete: true,
                                 class: "form-control",
                                 id: "email",
-                                name: "email",
+                                name: "user[email]",
                                 placeholder:"Email Address"
                             %>
                             </div>
