MOVED ./assets/css/ to ./assets/stylesheets/. MOVED ./assets/img/ to ./assets/images/

--- a/app/assets/scss/_hero-area.scss
+++ b/app/assets/scss/_hero-area.scss
@@ -2,7 +2,7 @@
 3. Hero Area
 ========================================================================== */
 #hero-area{
-	background: url(../img/coffeecup.jpg) no-repeat;
+	background: url(../images/coffeecup.jpg) no-repeat;
 	background-size: cover;
 	color: #fff;
 	overflow: hidden;
@@ -161,7 +161,7 @@
 
 // Search-two-inner 2
 #hero-area-two{
-	background: url(../img/coffeecup.jpg) no-repeat;
+	background: url(../images/coffeecup.jpg) no-repeat;
 	background-size: cover;
 	color: #fff;
 	overflow: hidden;
