--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,14 @@
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
+*= require animate
+*= require bootstrap
+*= color-switcher
+*= require ch
+*= require classix
+*= require color-switcher
+*= require fontawesome
+*= require responsive
+*= require slicknav
 *= require_self
-*= require trix
 */
