--- a/app/assets/stylesheets/classix.css
+++ b/app/assets/stylesheets/classix.css
@@ -914,7 +914,7 @@ a.back-to-top:hover, a.back-to-top:focus {
 3. Hero Area
 ========================================================================== */
 #hero-area {
-  background: url(../img/coffeecup.jpg) no-repeat;
+  background: url(../images/coffeecup.jpg) no-repeat;
   background-size: cover;
   color: #fff;
   overflow: hidden;
@@ -1097,7 +1097,7 @@ a.back-to-top:hover, a.back-to-top:focus {
 }
 
 #hero-area-two {
-  background: url(../img/coffeecup.jpg) no-repeat;
+  background: url(../images/coffeecup.jpg) no-repeat;
   background-size: cover;
   color: #fff;
   overflow: hidden;
@@ -5507,7 +5507,7 @@ ul.no-bullet {
 }
 
 .counter-section {
-  background: url(../img/background/counter-back1.jpg);
+  background: url(../images/background/counter-back1.jpg);
   overflow: hidden;
   position: relative;
 }
