Migrated image types to png

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,8 @@
     <%= stylesheet_link_tag 'application', media: 'all' %>
 
     <!-- Apple PWA -->
-    <link rel="manifest" href="//manifest.json">
-    <link rel="apple-touch-icon" href="//apple-touch-icon.png">
+    <link rel="manifest" href="manifest.json">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
     <%= render "partials/header_meta" %>
 
