--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -103,7 +103,7 @@
                       <%= image_tag(
                         @listing.user.avatar.url(:thumb),
                         class: "avatar",
-                        onerror: "this.onerror=null;this.src='/assets/image_coming_soon.jpg';"
+                        onerror: "this.onerror=null;this.src='/assets/image_coming_soon.png';"
                       ) %>
                     <% end %>
                   </div>
