--- a/app/views/pages/career.html.erb
+++ b/app/views/pages/career.html.erb
@@ -1,5 +1,5 @@
 <!-- Page Header Start -->
-<div class="page-header" style="background: url(/assets/images/coffeecup.jpg);"></div>
+<div class="page-header" style="background: url(/assets/images/coffeecup.png);"></div>
 
 <!-- Career Section Start -->
 <section id="about" class="section-padding" >
@@ -21,7 +21,7 @@
         </div>
         </div>
             <div class="col-md-6 col-lg-6 col-xs-12">
-        <img src="assets/images/career.jpg">
+        <img src="assets/images/career.png">
         </div> 
     </div>
     </div>
