--- a/app/views/pages/safetytips.html.erb
+++ b/app/views/pages/safetytips.html.erb
@@ -1,5 +1,5 @@
 <!-- Page Header Start -->
-<div class="page-header" style="background: url(/assets/images/coffeecup.jpg);"></div>
+<div class="page-header" style="background: url(/assets/images/coffeecup.png);"></div>
 
 <style>
 
