--- a/app/views/pages/howitworks.erb
+++ b/app/views/pages/howitworks.erb
@@ -1,5 +1,5 @@
 <!-- Page Header Start -->
-<div class="page-header" style="background: url(/assets/images/coffeecup.jpg);"></div>
+<div class="page-header" style="background: url(/assets/images/coffeecup.png);"></div>
 
 <!-- How it Works Section Start -->
 <section class="works section-padding">
