--- a/app/views/subcategories/partials/_item_card.erb
+++ b/app/views/subcategories/partials/_item_card.erb
@@ -11,7 +11,7 @@
             <%= image_tag(
                 "https://" + ENV['AWS_S3_MEDIA_DISPLAY_BUCKET'] + ".s3" + (ENV['REGION'] != 'us-east-1' ? '-' + ENV['REGION'] : '') + ".amazonaws.com/" + listing.media_file_name + "-1m-00001.png",
                 class: "img-fluid",
-                onerror: "this.onerror=null;this.src='/assets/image_coming_soon.jpg';"
+                onerror: "this.onerror=null;this.src='/assets/image_coming_soon.png';"
             ) %>
         <% end %>
     </figure>
