ADDED font-awesome to application.css

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,6 +16,7 @@
 *= require ch
 *= require classix
 *= require color-switcher
+*= require font-awesome
 *= require responsive
 *= require slicknav
 *= require_self
