--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <%= stylesheet_link_tag 'application', media: 'all' %>
 
     <!-- Apple PWA -->
+    <link rel="manifest" href="//<%= ( ENV["STAGE"] == 'prd' ? 'www' : ENV["STAGE"]) + '.' + ENV["NAME"] + '.com' %>/manifest.json">
     <link rel="apple-touch-icon" href="assets/images/apple-touch-icon.png">
 
     <%= render "partials/header_meta" %>
@@ -49,7 +50,7 @@
     <%= javascript_include_tag 'application' %>
 
     <script src="//kit.fontawesome.com/5139b5ea4d.js" crossorigin="anonymous"></script>
-    <link href="https://<%= ( ENV["STAGE"] == 'prd' ? 'www' : ENV["STAGE"]) + '.' + ENV["NAME"] + '.com' %>/assets/stylesheets/line-icons.css" rel="stylesheet">
+    <link href="//<%= ( ENV["STAGE"] == 'prd' ? 'www' : ENV["STAGE"]) + '.' + ENV["NAME"] + '.com' %>/assets/stylesheets/line-icons.css" rel="stylesheet">
 
   </body>
 </html>
