--- a/app/assets/stylesheets/classix.css
+++ b/app/assets/stylesheets/classix.css
@@ -458,7 +458,7 @@ a.back-to-top:hover, a.back-to-top:focus {
   display: inline-block;
 }
 
-.page-header .breadcrumb-wrapper . li a {
+.page-header .breadcrumb-wrapper > li a {
   color: #fff;
   padding-right: 5px;
 }
