FIXED missing styles, images, and form field placeholders.

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -23,6 +23,7 @@
                                 <i class="lni-user"></i>
                                 <%= f.text_field :username,
                                     class: "form-control",
+                                    placeholder:"Username",
                                     value: ""
                                 %>
                             </div>
@@ -32,6 +33,7 @@
                                 <i class="lni-envelope"></i>
                                 <%= f.email_field :email,
                                     class: "form-control",
+                                    placeholder:"Email Address",
                                     value: ""
                                 %>
                             </div>
@@ -41,6 +43,7 @@
                                 <i class="lni-lock"></i>
                                 <%= f.password_field :password,
                                     class: "form-control",
+                                    placeholder:"Password",
                                     value: ""
                                 %>
                             </div>
@@ -50,6 +53,7 @@
                                 <i class="lni-lock"></i>
                                 <%= f.password_field :password_confirmation,
                                     class: "form-control",
+                                    placeholder:"Confirm Password",
                                     value: ""
                                 %>
                             </div>
