--- a/app/views/listings/partials/_form.erb
+++ b/app/views/listings/partials/_form.erb
@@ -87,7 +87,7 @@
                                             required: true,
                                             type: "regexp",
                                             maxlength: "256",
-                                            pattern: "[A-Za-z0-9]+{256}",
+                                            pattern: "[A-Za-z0-9 ]+",
                                             placeholder: "Name of the item you want to sell."
                                         %>
                                     </div>
@@ -98,7 +98,7 @@
                                             required: true,
                                             type: "text",
                                             maxlength: "32",
-                                            pattern: "[A-Za-z]+{32}",
+                                            pattern: "[A-Za-z ]+",
                                             placeholder: "exp. Sometown"
                                         %>
                                     </div>
