--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,14 +10,7 @@
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
-*= require animate
-*= require bootstrap
-*= require ch
-*= require classix
-*= require color-switcher
-*= require fontawesome
-*= require responsive
-*= require slicknav
-*= require trix
 *= require_self
+*= require_tree
 */
+
