AddThis should not only display on listing VWs

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -145,4 +145,7 @@
     </div>
   </div>
 </div>
-  <!-- Listing Details End -->
+<!-- Listing Details End -->
+
+<!-- Addthis floating view widget -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-61fffe6e7d992781"></script>
