--- a/app/views/partials/_header_page_title.erb
+++ b/app/views/partials/_header_page_title.erb
@@ -1,5 +1,5 @@
 <!-- Page Header Start -->
-<div class="page-header" style="background: url(/assets/images/coffeecup.png);">
+<div class="page-header" style="background: url(/assets/images/coffeecup.jpg);">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
