--- a/app/assets/stylesheets/classix.css
+++ b/app/assets/stylesheets/classix.css
@@ -636,7 +636,6 @@ a.back-to-top:hover, a.back-to-top:focus {
 
 .navbar-expand-lg .navbar-nav .nav-link {
   font-size: 14px;
-  color: #fff;
   padding: 0 17px;
   margin-top: 20px;
   margin-bottom: 20px;
@@ -914,7 +913,7 @@ a.back-to-top:hover, a.back-to-top:focus {
 3. Hero Area
 ========================================================================== */
 #hero-area {
-  background: url(../assets/images/coffeecup.png) no-repeat;
+  background: url(../assets/images/coffeecup.jpg) no-repeat;
   background-size: cover;
   color: #fff;
   overflow: hidden;
@@ -1097,7 +1096,7 @@ a.back-to-top:hover, a.back-to-top:focus {
 }
 
 #hero-area-two {
-  background: url(../assets/images/coffeecup.png) no-repeat;
+  background: url(../assets/images/coffeecup.jpg) no-repeat;
   background-size: cover;
   color: #fff;
   overflow: hidden;
