--- a/app/views/pages/career.html.erb
+++ b/app/views/pages/career.html.erb
@@ -1,5 +1,5 @@
 <!-- Page Header Start -->
-<div class="page-header" style="background: url(/assets/images/coffeecup.png);"></div>
+<div class="page-header" style="background: url(/assets/images/coffeecup.jpg);"></div>
 
 <!-- Career Section Start -->
 <section id="about" class="section-padding" >
