--- a/app/views/partials/_header.erb
+++ b/app/views/partials/_header.erb
@@ -1,67 +1,69 @@
 <!-- Header Area wrapper Starts -->
 <header id="header-wrap">
     <!-- Navbar Start -->
-    <nav class="navbar navbar-expand-lg fixed-top scrolling-navbar">
+
+    <nav class="navbar navbar-expand-lg fixed-top scrolling-navbar navbar-light bg-light">
         <div class="container">
-            <div class="theme-header clearfix">
-                <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header">
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-navbar"
-                        aria-controls="main-navbar" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                        <span class="lni-menu"></span>
-                        <span class="lni-menu"></span>
-                        <span class="lni-menu"></span>
-                    </button>
-                    <a href="/" class="navbar-brand">
-                        <img src="/assets/images/ch_small_grey.png" alt="Connechub">
-                    </a>
-                </div>
-                <div class="collapse navbar-collapse" id="main-navbar">
-                    <ul class="navbar-nav mr-auto w-100 justify-content-left">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true"
-                                aria-expanded="false">
-                                Categories <i class="lni-chevron-down"></i>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <% @categories.each do |category| %>
-                                    <li><a class="dropdown-item" href="/categories/<%= category.id %>"><i
-                                                class="fas fa-<%= category.icon %>"></i>
-                                            <%= category.name %>
-                                        </a></li>
-                                    <% end %>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/contact"> Contact </a>
-                        </li>
-                        <% if user_signed_in? %>
-                        <li class="nav-item">
-                            <%= link_to(user_path(current_user.username), class: "nav-link" ) do %> <i class="lni-lock"></i> Your Profile<% end %>
-                        </li>
-                        <li class="nav-item">
-                            <%= link_to(destroy_user_session_path, class: "nav-link" ) do %> <i class="lni-exit"></i> Sign Out<% end %>
-                        </li>
-                        <% else %>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/users/sign_up"> <i class="lni-pencil"></i> Sign Up</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/users/sign_in"> <i class="lni-lock"></i> Sign In</a>
-                        </li>
-                        <% end %>
-                        <li class="header-top-right float-right" style="padding: 20px 20px 20px 105px;">
-                            <a class="btn btn-common" href="/listings/new">
-                                <i class="lni-pencil-alt"></i> Post an Ad
-                            </a>
-                        </li>
-                    </ul>
-                </div>
+            <a href="/" class="navbar-brand">
+                <img src="/assets/images/ch_small_grey.png" alt="Connechub">
+            </a>
+            <button
+                aria-controls="navbarSupportedContent"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+                class="navbar-toggler"
+                data-target="#navbarSupportedContent"
+                data-toggle="collapse"
+                type="button"
+            >
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div
+                class="collapse navbar-collapse"
+                id="navbarSupportedContent"
+            >
+                <ul class="navbar-nav">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true"
+                            aria-expanded="false">
+                            Categories <i class="lni-chevron-down"></i>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <% @categories.each do |category| %>
+                                <li><a class="dropdown-item" href="/categories/<%= category.id %>"><i
+                                            class="fas fa-<%= category.icon %>"></i>
+                                        <%= category.name %>
+                                    </a></li>
+                                <% end %>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/contact"> Contact </a>
+                    </li>
+                    <% if user_signed_in? %>
+                    <li class="nav-item">
+                        <%= link_to(user_path(current_user.username), class: "nav-link" ) do %> <i class="lni-lock"></i> Your Profile<% end %>
+                    </li>
+                    <li class="nav-item">
+                        <%= link_to(destroy_user_session_path, class: "nav-link" ) do %> <i class="lni-exit"></i> Sign Out<% end %>
+                    </li>
+                    <% else %>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/users/sign_up"> <i class="lni-pencil"></i> Sign Up</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/users/sign_in"> <i class="lni-lock"></i> Sign In</a>
+                    </li>
+                    <% end %>
+                    <li class="nav-item" style="padding: 20px">
+                        <a class="btn btn-common" href="/listings/new"><i class="lni-pencil-alt"></i> Post an Ad</a>
+                    </li>
+                </ul>
             </div>
         </div>
-        <div class="mobile-menu" data-logo="/assets/images/ch_small_grey.png"></div>
     </nav>
+
     <!-- Navbar End -->
 </header>
 <!-- Header Area wrapper End -->
