--- a/app/views/listings/upload.html.erb
+++ b/app/views/listings/upload.html.erb
@@ -79,6 +79,8 @@ $(document).on('ready', function () {
     document.getElementById('fileupload').onchange = setFileInfo;
 
     function setFileInfo() {
+        console.log('fileupload start');
+
         var files = this.files;
         media_file.push(files[0]);
         var video = document.createElement('video');
