REMOVED bullet styles from aside menus. FIXED URI for loading animation

--- a/app/assets/stylesheets/ch.css
+++ b/app/assets/stylesheets/ch.css
@@ -45,3 +45,7 @@ h6.section-sub-header {
 trix-editor#listing_description {
   overflow: auto;
 }
+
+aside > div > ul > li:nth-child(2) > ul {
+  list-style-type: none;
+}
