Trying to fix aside ul bullets, again. Trying to fix error when recoverying password.

--- a/app/assets/stylesheets/ch.css
+++ b/app/assets/stylesheets/ch.css
@@ -46,6 +46,6 @@ trix-editor#listing_description {
   overflow: auto;
 }
 
-aside > div > ul > li:nth-child(2) > ul {
+aside > div > ul > li > ul {
   list-style-type: none;
 }
