Docs update. Editing listing no longer allows *_category_id values.

--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -1,5 +1,5 @@
 <%= render :partial => 'listings/partials/form', locals: {
-    action: 'Create',
+    action: 'Edit',
     listing: @listing,
     title: 'Listing'
 } %>
